solar-system/solar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: bastion.karan.mahity.local:8443/repository/library/solar-system:latest
          ports:
            - containerPort: 80
