solar-system/solar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
  type: NodePort
