solar-system/solar-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: solar.mahity.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-service
            port:
              number: 80
